Четвёртая финальная итерация

--- a/catalog.html
+++ b/catalog.html
@@ -15,7 +15,7 @@
           <button type="submit" name="search">Найти</button>
         </form>
         <div class="user-section">
-          <p><a class="user" href="#">Валентин Петухов</a><a class="logout" href="#">Выйти</a></p>
+          <p><a class="user" href="user-profile.html">Валентин Петухов</a><a class="logout" href="logout.html">Выйти</a></p>
           <a class="compare" href="#">Сравнить</a>
           <a class="cart" href="#">Корзина</a>
         </div>
@@ -165,7 +165,7 @@
             <li><a class="previous" href="#prev">Назад</a></li>
             <li>
               <ul>
-                <li><a class="paginator-current-page">1</a></li>
+                <li><span class="paginator-current-page">1</span></li>
                 <li><a href="#2">2</a></li>
                 <li><a href="#3">3</a></li>
               </ul>
@@ -181,7 +181,7 @@
       <div class="flex-wrapper">
         <div class="logo"><a href="index.html"><img src="img/logo-footer.svg" width="163" height="35" alt="Device"></a></div>
         <div class="footer-user-section">
-          <a class="user" href="#">Выйти</a>
+          <a class="user" href="logout.html">Выйти</a>
           <a class="compare" href="#">Сравнить</a>
           <a class="cart" href="#">Корзина</a>
         </div>
