--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <button type="submit" name="search">Найти</button>
         </form>
         <div class="user-section">
-          <p><a class="user" href="#">Войти</a></p>
+          <p><a class="user" href="user-profile.html">Войти</a></p>
           <a class="compare" href="#">Сравнить</a>
           <a class="cart" href="#">Корзина</a>
         </div>
@@ -201,7 +201,7 @@
       </svg>
       <h2 class="heading">Контакты</h2>
       <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-      <a class="map-open" href="map.html"><img src="img/map.jpg" width="560" height="222" alt="Карта проезда"></a>
+      <a class="map-open" href="https://www.google.ru/maps/place/%D1%83%D0%BB.+%D0%A1%D1%82%D1%80%D0%BE%D0%B8%D1%82%D0%B5%D0%BB%D0%B5%D0%B9,+15,+%D0%9C%D0%BE%D1%81%D0%BA%D0%B2%D0%B0,+119311/@55.687031,37.5274293,17z/data=!3m1!4b1!4m5!3m4!1s0x46b54cf65f5c8955:0x694710ccd55501e!8m2!3d55.687031!4d37.529618"><img src="img/map.jpg" width="560" height="222" alt="Карта проезда"></a>
       <section class="modal modal-map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1125488779976!2d37.52742931592807!3d55.687030980535816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1504641846105" width="960" height="559" style="border:0" allowfullscreen></iframe>
         <button class="modal-close" type="button"><span class="visually-hidden">Закрыть карту</span></button>
@@ -232,7 +232,7 @@
       <div class="flex-wrapper">
         <div class="logo"><img src="img/logo-footer.svg" width="163" height="35" alt="Device"></div>
         <div class="footer-user-section">
-          <a class="user" href="#">Войти</a>
+          <a class="user" href="user-profile.html">Войти</a>
           <a class="compare" href="#">Сравнить</a>
           <a class="cart" href="#">Корзина</a>
         </div>
