--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
   <section class="container">
     <h2 class="visually-hidden">Популярные товары</h2>
     <ul class="popular-list">
-      <li><a href="catalog.html">Виртуальная реальность</a></li>
-      <li><a href="catalog.html">Моноподы для&#160;селфи</a></li>
-      <li><a href="catalog.html">Экшн-камеры</a></li>
-      <li><a href="catalog.html">Фитнес-браслеты</a></li>
-      <li><a href="catalog.html">Умные часы</a></li>
-      <li><a href="catalog.html">Квадрокоптеры</a></li>
+      <li><a  class="popular-vr" href="catalog.html">Виртуальная реальность</a></li>
+      <li><a class="popular-monopod" href="catalog.html">Моноподы для&#160;селфи</a></li>
+      <li><a class="popular-camera" href="catalog.html">Экшн-камеры</a></li>
+      <li><a class="popular-fitness" href="catalog.html">Фитнес-браслеты</a></li>
+      <li><a class="popular-smartwatch" href="catalog.html">Умные часы</a></li>
+      <li><a class="popular-copter" href="catalog.html">Квадрокоптеры</a></li>
     </ul>
   </section>
   <section class="services-slider">
