Шестая финальная итерация

--- a/index.html
+++ b/index.html
@@ -53,16 +53,17 @@
     </div>
   </header>
   <section class="product-slider container">
-    <input class="visually-hidden" type="radio" name="slider-switch" id="product-1" checked>
-    <input class="visually-hidden" type="radio" name="slider-switch" id="product-2">
-    <input class="visually-hidden" type="radio" name="slider-switch" id="product-3">
+    <input class="product-1 visually-hidden" type="radio" name="slider-switch" id="product-1" checked>
+    <input class="product-2 visually-hidden" type="radio" name="slider-switch" id="product-2">
+    <input class="product-3 visually-hidden" type="radio" name="slider-switch" id="product-3">
     <ol>
       <li class="product-slide slide-1">
+        <svg class="o1" xmlns="http://www.w3.org/2000/svg" width="164.78" height="130.469" viewBox="0 0 164.78 130.469"><defs><style>.cls-1 { fill: #fff; fill-rule: evenodd; }</style></defs><path id="_01" data-name="1" class="cls-1" d="M51.07 130.47c32.44 0 51.07-26.522 51.07-65.23S83.51.015 51.07.015 0 26.534 0 65.24s18.64 65.23 51.07 65.23zm0-27.956c-15.05 0-22.4-13.08-22.4-37.273s7.35-37.27 22.4-37.27 22.4 13.08 22.4 37.27-7.35 37.27-22.4 37.27zm88.63-99.99L106.91 14.35l6.99 24.55 22.22-6.093v95.153h28.67V2.518H139.7z"/></svg>
         <div class="image-wrapper">
           <img src="img/slider-1.png" width="384" height="486" alt="Селфи-палка 8 м">
         </div>
         <div class="text-wrapper">
-          <svg xmlns="http://www.w3.org/2000/svg" width="100" height="7" viewBox="0 0 100 7">
+          <svg class="rect" xmlns="http://www.w3.org/2000/svg" width="100" height="7" viewBox="0 0 100 7">
             <rect fill="#ffffff" x="0" y="0" width="100" height="7"/>
           </svg>
           <h2 class="heading">Делай селфи, <br>как Бен Стиллер!</h2>
@@ -83,11 +84,12 @@
         </div>
       </li>
       <li class="product-slide slide-2">
+        <svg class="o2" xmlns="http://www.w3.org/2000/svg" width="196.4" height="130.469" viewBox="0 0 196.4 130.469"><defs><style>.cls-1 { fill: #fff; fill-rule: evenodd; }</style></defs><path id="_02" data-name="2" class="cls-1" d="M51.06 130.47c32.43 0 51.07-26.522 51.07-65.23S83.49.015 51.06.015-.02 26.534-.02 65.24s18.64 65.23 51.08 65.23zm0-27.956c-15.06 0-22.4-13.08-22.4-37.273S36 27.97 51.06 27.97s22.4 13.08 22.4 37.27-7.35 37.27-22.4 37.27zm60.04 25.446h85.3v-27.6h-42.11l20.79-20.966c11.47-11.47 19.53-24.37 19.53-39.423 0-25.266-20.07-39.96-42.47-39.96-17.38 0-34.23 8.78-42.29 27.417l24.19 14.157c3.41-7.885 9.68-13.62 18.46-13.62 8.42 0 13.44 5.377 13.44 13.26 0 7.348-5.38 14.695-12.73 22.22L111.1 107.17v20.786z"/></svg>
         <div class="image-wrapper">
           <img src="img/slider-2.png" width="345" height="485" alt="Фитнес-браслет">
         </div>
         <div class="text-wrapper">
-          <svg xmlns="http://www.w3.org/2000/svg" width="100" height="7" viewBox="0 0 100 7">
+          <svg class="rect" xmlns="http://www.w3.org/2000/svg" width="100" height="7" viewBox="0 0 100 7">
             <rect fill="#ffffff" x="0" y="0" width="100" height="7"/>
           </svg>
           <h2 class="heading">Худеем <br>правильно!</h2>
@@ -104,11 +106,12 @@
         </div>
       </li>
       <li class="product-slide slide-3">
+        <svg class="o3" xmlns="http://www.w3.org/2000/svg" width="199.91" height="130.469" viewBox="0 0 199.91 130.469"><defs><style>.cls-1 { fill: #fff; fill-rule: evenodd; }</style></defs><path id="_03" data-name="3" class="cls-1" d="M51.08 130.47c32.43 0 51.07-26.522 51.07-65.23S83.51.015 51.08.015.01 26.534.01 65.24s18.63 65.23 51.07 65.23zm0-27.956c-15.06 0-22.4-13.08-22.4-37.273s7.34-37.27 22.4-37.27 22.4 13.08 22.4 37.27-7.35 37.27-22.4 37.27zm122.12-49.1l21.68-27.6V2.518h-80.64v26.88h45.88l-22.76 28.85 10.93 16.307h5.91c11.83 0 17.03 6.272 17.03 13.977s-5.2 13.977-17.03 13.977c-10.93 0-16.3-5.018-19.17-13.26l-24.73 14.334c7.71 18.458 24.91 26.88 43.9 26.88 24.19 0 45.7-14.336 45.7-41.932 0-17.382-11.29-29.747-26.7-35.122z"/></svg>
         <div class="image-wrapper">
           <img src="img/slider-3.png" width="526" height="334" alt="Селфи-палка 8 м">
         </div>
         <div class="text-wrapper">
-          <svg xmlns="http://www.w3.org/2000/svg" width="100" height="7" viewBox="0 0 100 7">
+          <svg class="rect" xmlns="http://www.w3.org/2000/svg" width="100" height="7" viewBox="0 0 100 7">
             <rect fill="#ffffff" x="0" y="0" width="100" height="7"/>
           </svg>
           <h2 class="heading">Порхает как бабочка, жалит как пчела!</h2>
@@ -136,7 +139,7 @@
   <section class="container">
     <h2 class="visually-hidden">Популярные товары</h2>
     <ul class="popular-list">
-      <li><a  class="popular-vr" href="catalog.html">Виртуальная реальность</a></li>
+      <li><a class="popular-vr" href="catalog.html">Виртуальная реальность</a></li>
       <li><a class="popular-monopod" href="catalog.html">Моноподы для&#160;селфи</a></li>
       <li><a class="popular-camera" href="catalog.html">Экшн-камеры</a></li>
       <li><a class="popular-fitness" href="catalog.html">Фитнес-браслеты</a></li>
@@ -147,9 +150,9 @@
   <section class="services-slider">
     <div class="container">
       <h2 class="visually-hidden">Сервисы</h2>
-      <input class="visually-hidden" type="radio" name="services-slider-radio" id="service-1" checked>
-      <input class="visually-hidden" type="radio" name="services-slider-radio" id="service-2">
-      <input class="visually-hidden" type="radio" name="services-slider-radio" id="service-3">
+      <input class="service-1 visually-hidden" type="radio" name="services-slider-radio" id="service-1" checked>
+      <input class="service-2 visually-hidden" type="radio" name="services-slider-radio" id="service-2">
+      <input class="service-3 visually-hidden" type="radio" name="services-slider-radio" id="service-3">
       <div class="flex-wrapper">
         <div class="services-slider-switch">
           <label class="btn" for="service-1">Доставка</label>
@@ -201,7 +204,9 @@
       </svg>
       <h2 class="heading">Контакты</h2>
       <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-      <a class="map-open" href="https://www.google.ru/maps/place/%D1%83%D0%BB.+%D0%A1%D1%82%D1%80%D0%BE%D0%B8%D1%82%D0%B5%D0%BB%D0%B5%D0%B9,+15,+%D0%9C%D0%BE%D1%81%D0%BA%D0%B2%D0%B0,+119311/@55.687031,37.5274293,17z/data=!3m1!4b1!4m5!3m4!1s0x46b54cf65f5c8955:0x694710ccd55501e!8m2!3d55.687031!4d37.529618"><img src="img/map.jpg" width="560" height="222" alt="Карта проезда"></a>
+      <div class="small-map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1125488779976!2d37.52742931592807!3d55.687030980535816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1504641846105" width="560" height="222" style="border:0" allowfullscreen></iframe><a class="map-open" href="https://www.google.ru/maps/place/%D1%83%D0%BB.+%D0%A1%D1%82%D1%80%D0%BE%D0%B8%D1%82%D0%B5%D0%BB%D0%B5%D0%B9,+15,+%D0%9C%D0%BE%D1%81%D0%BA%D0%B2%D0%B0,+119311/@55.687031,37.5274293,17z/data=!3m1!4b1!4m5!3m4!1s0x46b54cf65f5c8955:0x694710ccd55501e!8m2!3d55.687031!4d37.529618"></a>
+      </div>
       <section class="modal modal-map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1125488779976!2d37.52742931592807!3d55.687030980535816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1504641846105" width="960" height="559" style="border:0" allowfullscreen></iframe>
         <button class="modal-close" type="button"><span class="visually-hidden">Закрыть карту</span></button>
